uploaded changes to site with buttons and nav bar

--- a/file.html
+++ b/file.html
@@ -3,12 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>My FAvorite game</title>
+    <!-- Font Awesome -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--Import Google Icon Font-->
+<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--Import materialize.css-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+<!--Let browser know website is optimized for mobile-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <h1>Forknife<h1>
+
+<nav>
+<div class="purple">
+  <a href=""class="brand-logo center">Fortnite</a>
+  <ul id="nav-mobile" class="left hide-on-med-and-down">
+  <li><a href="#">Home</a></li>
+    <li><a href="#">about</a></li>
+    <li><a href="#">contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
   </head>
-  <body>
-<h2> What Is it <h2>
-  <p> Fortnite aka Forknife is a Battle Royale Game made by Epic Games. You load in with 100 people and you try
+  <body style="color: #5900e0; font-family:verdana" style="background-color: #38d112;">
+
+    <h2> What Is it </h2>
+    <p> Fortnite aka Forknife is a Battle Royale Game made by Epic Games. You load in with 100 people and you try
     to be the last one standing you can build and you have a a wide vareity of weapons. There are different rarietys that increase value such as  <p>
 
       <li> Grey(lowest)</li>
@@ -19,12 +39,35 @@
 
   <p> Fortnite comes out with different limited time game modes all the time. Personally my favorite is diamond rush oh sorry thats in minecraft. Playground
   is one of my favorites. You have an hour before the storm comes in. You can do many things in playground anything is aloud. There are 3 normal modes
-in fortnite solo, duos, and squads. If you are up for a challenge try going in solo against squads.</p>
+in fortnite solo, duos, and squads. If you are up for a challenge try going in solo against squads.
+
+
+<p>
+
+
+<div class="fixed-action-btn">
+<a href="#" class="btn-floating red btn-large"><i class="large material-icons">insert_chart</i></a></li>
+<ul>
+<li><a href="https://www.google.com/search?safe=strict&rls=com.microsoft%3Aen-US%3AIE-Address&biw=1184&bih=687&tbm=isch&sa=1&ei=isirW9z4JciVzwKckJjIBw&q=fortnite+&oq=fortnite+&gs_l=img.3..0l10.79448.82057..82648...0.0..0.83.909.14......0....1..gws-wiz-img.......0i67j0i10.w7NjvB1B8us#imgrc=6fJID1buo0JVUM:&spf=1537984744227https://www.google.com/search?safe=strict&rls=com.microsoft%3Aen-US%3AIE-Address&biw=1184&bih=687&tbm=isch&sa=1&ei=isirW9z4JciVzwKckJjIBw&q=fortnite+&oq=fortnite+&gs_l=img.3..0l10.79448.82057..82648...0.0..0.83.909.14......0....1..gws-wiz-img.......0i67j0i10.w7NjvB1B8us#imgrc=6fJID1buo0JVUM:&spf=1537984744227https://www.google.com/search?safe=strict&rls=com.microsoft%3Aen-US%3AIE-Address&biw=1184&bih=687&tbm=isch&sa=1&ei=isirW9z4JciVzwKckJjIBw&q=fortnite+&oq=fortnite+&gs_l=img.3..0l10.79448.82057..82648...0.0..0.83.909.14......0....1..gws-wiz-img.......0i67j0i10.w7NjvB1B8us#imgrc=6fJID1buo0JVUM:&spf=1537984744227" class="btn-floating yellow btn-large"><i class="large material-icons">insert_chart</i></a></li>
+<li><a href="https://www.google.com/search?q=fortnite+patch+notes&sourceid=ie7&rls=com.microsoft:en-US:IE-SearchBox&ie=&oe=" class="btn-floating blue btn-large"><i class="large material-icons">format_quote</i></a></li>
+<li><a href="https://www.google.com/search?q=finger+game&safe=strict&rls=com.microsoft:en-US:IE-Address&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj5h6r-ntndAhUDulMKHTMzA1MQ_AUIDigB&biw=1184&bih=687#imgrc=EBFlQirGoFv-zM:&spf=1537984579100" class="btn-floating green btn-large"><i class="large material-icons">publish</i></a></li>
+<li><a href="http://www.google.com" class="btn-floating orange btn-large"><i class="large material-icons">attach_file</i></a></li>
+</ul>
 </div>
 
 <img src="Ninja.jpg" alt="" style="width:50%; height:50%">
 
-<body style="background-color:lightblue">
+
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+
+       <script>
+          $(".button-collapse").sideNav();
+       </script>
+
+
+
 
 
   </body>
